--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,7 +10,7 @@ jobs:
           python-version: '3.9'
       - run: pip install pytest selenium
       - run: pytest tests/ --html=report.html --self-contained-html
-      - - uses: actions/upload-artifact@v4
-      - with:
-      - name: test-report
-      - path: report.html
+      - uses: actions/upload-artifact@v4
+      with:
+        name: test-report
+        path: report.html
