--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,16 +1,35 @@
 name: Run Tests
 on: [push]
+
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v5
         with:
           python-version: '3.9'
-      - run: pip install pytest selenium
-      - run: pytest tests/ --html=report.html --self-contained-html
-      - uses: actions/upload-artifact@v4  # Versão atualizada!
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y chromium-browser chromium-chromedriver
+          pip install pytest selenium pytest-html
+          pip install -r requirements.txt  # Se existir
+
+      - name: Run tests with retry
+        run: |
+          # Tenta executar os testes 2 vezes antes de falhar
+          pytest tests/ --html=report.html --self-contained-html || \
+          (echo "Primeira execução falhou - Tentando novamente..." && \
+          pytest tests/ --html=report.html --self-contained-html --last-failed)
+
+      - name: Upload report
+        if: always()  # Executa mesmo se os testes falharem
+        uses: actions/upload-artifact@v4
         with:
           name: test-report
           path: report.html
