--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,22 +1,17 @@
 name: Run Tests
-on: [push]
-
+on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v5
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-
-      - run: pip install pytest
-
-      - run: pytest tests/ --html=report.html --self-contained-html
-
-      - uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: test-report
-          path: report.html
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run tests
+        run: pytest tests/ --html=report.html --self-contained-html
