--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-﻿astroid==3.3.9
+# Dependências principais
+numpy==1.26.4
+scipy==1.11.4  # Última versão compatível com Python 3.9
+scikit-learn==1.2.2
+pandas==1.5.3
+
+# Outras dependências (já compatíveis)
+astroid==3.3.9
 attrs==25.3.0
 by==0.0.7
 certifi==2025.6.15
@@ -18,7 +25,6 @@ joblib==1.5.1
 MarkupSafe==3.0.2
 mccabe==0.7.0
 num2words==0.5.14
-numpy==1.26.4
 outcome==1.3.0.post0
 packaging==24.2
 platformdirs==4.3.7
@@ -34,18 +40,4 @@ pytest-metadata==3.1.1
 python-dotenv==1.1.1
 pytz==2025.1
 requests==2.32.4
-scikit-learn==1.2.2
-scipy==1.16.0
 selenium==4.0.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-threadpoolctl==3.6.0
-tomlkit==0.13.2
-trio==0.30.0
-trio-websocket==0.12.2
-typing_extensions==4.13.2
-u==1.0.4
-urllib3==2.4.0
-webdriver-manager==4.0.2
-websocket-client==1.8.0
-wsproto==1.2.0
