--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -5,37 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-          
-      - name: Install Chrome and ChromeDriver
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y chromium-browser chromium-chromedriver
-          # Remove existing links if they exist
-          sudo rm -f /usr/bin/google-chrome
-          sudo rm -f /usr/bin/chromedriver
-          # Create new symbolic links
-          sudo ln -s /usr/bin/chromium-browser /usr/bin/google-chrome
-          sudo ln -s /usr/lib/chromium-browser/chromedriver /usr/bin/chromedriver
-          # Verify installation
-          google-chrome --version
-          chromedriver --version
-          
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          
-      - name: Run tests
-        run: pytest tests/ --html=report.html --self-contained-html
-        
-      - name: Upload test report
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: test-report
-          path: report.html
+      - run: pip install -r requirements.txt
+      - run: pytest tests/  # Agora só testes unitários
